--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>TestiTest</h1>
 <p>Introducing github website.</p>
+  <a href="https://github.com/lepeutj/first-step"> ok </a>
 </body>
 </html>
