--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <body>
 <h1>TestiTest</h1>
-<p>Introducing github website.</p>
+<p>Introducing github website.
   <a href="https://github.com/lepeutj/first-step"> ok </a>
+</p>
+  
 </body>
 </html>
